# rl-toybox

./: .gitignore  README.md  pyproject.toml
core/: arcade_style.py  curriculum.py  io_schema.py  logging_utils.py  match_tracker.py  primitives.py  utils.py
core/algorithms/: __init__.py  base.py  exploration.py  factory.py
core/envs/: __init__.py  base.py  spaces.py  wrappers.py
core/io/: __init__.py  checkpoint.py  runs.py
core/rewards/: __init__.py  breakdown.py
core/runners/: __init__.py  eval.py  off_policy.py  on_policy.py
docs/: framework.md
games/: off_policy_defaults.py  registry.py  spec_types.py
games/bang/: README.md  config.py  env.py  spec.py
games/bang_legacy/: pyproject.toml
games/bang_legacy/model/64_48/: bang_64_48.pth
games/bang_legacy/src/bang_ai/: assets.py
games/kick/: README.md  config.py  env.py  spec.py
games/snake/: README.md  config.py  env.py  spec.py
games/stomp/: README.md  env.py  spec.py
games/vroom/: README.md  config.py  env.py  spec.py  trackgen.py
games/walk/: README.md  config.py  env.py  spec.py
runs/bang/: dqn_64_64_L1_best.pth  dqn_64_64_L1_check.pth  dqn_64_64_L2_best.pth  dqn_64_64_L3_best.pth  dqn_64_64_L3_check.pth  dqn_64_64_metrics.json
runs/kick/: ppo_96_96_L1_best.pth  ppo_96_96_L1_check.pth  ppo_96_96_L2_best.pth  ppo_96_96_L2_check.pth  ppo_96_96_metrics.json
runs/snake/: qlearn_32_L1_best.pth  qlearn_32_L1_check.pth  qlearn_32_L2_best.pth  qlearn_32_L2_check.pth  (+4 more)
scripts/: __init__.py  common.py  play_ai.py  play_user.py  train.py
tests/: test_exploration_controller.py
(+43 files in other folders)
