[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bang-ai"
version = "0.1.0"
description = "Lightweight top-down arena RL project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arcade>=3.3.3",
  "torch>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bang_ai = ["assets/fonts/*.ttf"]
